# Binary_Calculator_FLTK

./: CMakeLists.txt  calc.cpp  calc.h  main.cpp
